fix: links and paths for images

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -268,9 +268,9 @@
                     <h3 class="section__header">SVG - Scalable vector graphics (grafika wektorowa)</h3>
                     <p class="section__paragraph"><strong>SVG</strong> - uniwersalny format dwuwymiarowej grafiki
                         wektorowej który możemy stylować, animować za pomocą CSS.</p>
-                    <img src="img/clown-fish.svg" alt="Obrazek rybki w formacie SVG." class="image image--size">
+                    <img src="assets/img/clown-fish.svg" alt="Obrazek rybki w formacie SVG." class="image image--size">
                     <p class="section__paragraph"><strong>Kod grafiki:</strong></p>
-                    <img src="img/fish-code.webp" alt="Kod grafiki wektorowej." class="image">
+                    <img src="assets/img/fish-code.webp" alt="Kod grafiki wektorowej." class="image">
                 </section>
                 <section class="section" id="head">
                     <h3 class="section__header">Head & OpenGraph</h3>
