--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -448,7 +448,7 @@
                     <h3 class="section__header">Flexbox</h3>
                     <p class="section__paragraph">Flexbox - system rozmieszczania i pozycjonowania elementów w dwóch
                         osiach. W pionie i poziomie.</p>
-                    <img class="image" src="img/flex-direction.webp" alt="flexbox">
+                    <img class="image" src="assets/img/flex-direction.webp" alt="flexbox">
                     <p class="section__paragraph"> <strong>flex-direction:</strong> row, column, row-reverse,
                         column-reverse - wybór osi rozmieszczania elementów</p>
                     <p class="section__paragraph"><strong>flex-wrap:</strong> nowrap, wrap, wrap-reverse - określa czy
