--- a/src/content/third.html
+++ b/src/content/third.html
@@ -225,7 +225,7 @@
                     <p class="section__paragraph">Świat internetowych stron jest płaski, prawie cały. Można przyjąć, że
                         świat stron internetowych jest 2(.5) wymiarowy.
                     </p>
-                    <img class="image" src="img/box-model.webp" alt="model pudełkowy">
+                    <img class="image" src="assets/img/box-model.webp" alt="model pudełkowy">
                     <p class="section__paragraph">Box model jest to prostokąt, w którym umieszczona jest treść (obrazek,
                         tekst itd.). Treść ta może przybrać obojętnie jaki kształt, trójkąt, koło itd. niezależnie od
                         tego zawsze opisana jest w prostokącie. Ten prostokąt posiada własności: content (treść),
@@ -300,7 +300,7 @@
                         <li>BE<strong>M</strong> - modyfikator, jeśli element występuje w kilku wariacjach tworzymy
                             dodatkową klasę</li>
                     </ul>
-                    <img class="image" src="img/bem.webp" alt="Block Element Modifier">
+                    <img class="image" src="assets/img/bem.webp" alt="Block Element Modifier">
                     <section class="card">
                         <h4 class="card__header">Podsumowanie</h4>
                         <ul class="card__list">
