--- a/fifth.html
+++ b/fifth.html
@@ -259,7 +259,7 @@
                 <section class="section" id="grid">
                     <h3 class="section__header">CSS Grid</h3>
                     <p class="section__paragraph">Grid służy do tworzenia layoutów.</p>
-                    <img class="image" src="img/grid-concepts.svg" alt="grid">
+                    <img class="image" src="assets/img/grid-concepts.svg" alt="grid">
                     <p class="section__paragraph">Źródło: <a class="section__link"
                             href="https://webkit.org/blog/7434/css-grid-layout-a-new-layout-module-for-the-web/">https://webkit.org/blog/7434/css-grid-layout-a-new-layout-module-for-the-web/</a>
                     </p>
