--- a/second.html
+++ b/second.html
@@ -226,7 +226,7 @@
                         zawierać
                         rzeczy
                         ukończone.</p>
-                    <img class="image" src="img/kanban-small.webp" alt="tablica kanban">
+                    <img class="image" src="assets/img/kanban-small.webp" alt="tablica kanban">
 
                 </section>
                 <section class="section" id="html">
@@ -324,17 +324,17 @@
                     <code class="language-html section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code></pre>
                     <p class="section__paragraph">Styl w znaczniku "style" - z takim stylowaniem możemy się spotkać,
                         jednak najczęściej najlepszym wyborem jest używanie stylów w osobnym pliku "style.css".</p>
-                    <img class="image" src="img/style-markup.webp" alt="przykład stylów w znaczniku style">
+                    <img class="image" src="assets/img/style-markup.webp" alt="przykład stylów w znaczniku style">
                     <p class="section__paragraph section__paragraph--position">Style osadzone w zanczniku "style".
                     </p>
-                    <img class="image" src="img/style-file.webp" alt="style umieszczone w osobnym pliku">
+                    <img class="image" src="assets/img/style-file.webp" alt="style umieszczone w osobnym pliku">
                     <p class="section__paragraph section__paragraph--position">Style umieszczone w osobnym pliku.</p>
                     <section class="card">
                         <h4 class="card__header">Specyficzność</h4>
                         <p class="card__paragraph">Specyfikacja medalowa - to sposób wybierania selektorów pod kątem
                             ich
                             ważności.</p>
-                        <img src="img/specificity.webp" alt="specyficzność css" class="image">
+                        <img src="assets/img/specificity.webp" alt="specyficzność css" class="image">
                         <p class="card__paragraph"><strong>Materiały uzupełniające:</strong></p>
                         <ul class="card__list card__list--no-style">
                             <li><a class="card__link" href="http://makble.com/css-rule-priority-and-specificity">CSS
@@ -409,7 +409,7 @@
                     </ul>
                     <p class="section__paragraph">Zmienne w JavaScriptcie są jak młody pelikan: "łykną" wszystko.
                         JavaScript nie jest językiem silnie typowanym </p>
-                    <img class="image" src="img/variable.webp" alt="zmienne w javaScript">
+                    <img class="image" src="assets/img/variable.webp" alt="zmienne w javaScript">
                     <p class="section__paragraph">W JS prawie wszystko jest obiektem, bo nawet typy proste, które
                         nie są
                         obiektami, to się tak zachowują.</p>
@@ -440,7 +440,7 @@
                     <p class="section__paragraph"><b>code . </b> - uruchomienie visual studio code w aktualnym
                         katalogu
                     </p>
-                    <img class="image" src="img/terminal.webp" alt="terminal">
+                    <img class="image" src="assets/img/terminal.webp" alt="terminal">
                 </section>
             </div>
 
