--- a/sixth.html
+++ b/sixth.html
@@ -283,11 +283,11 @@
                         wcięciach, oraz SCSS, która używa nawiasów klamrowych podobnie jak CSS.</p>
                     <p class="section__paragraph"><strong>$zmienna</strong> - definiowanie zmiennej</p>
                     <p class="section__paragraph"><strong>@mixin @include</strong> - przykład domieszki:</p>
-                    <img class="image" src="img/mixin.webp" alt="mixin w sass">
+                    <img class="image" src="assets/img/mixin.webp" alt="mixin w sass">
                     <p class="section__paragraph"><strong>@extend</strong> - przykład:</p>
-                    <img src="img/extend.webp" alt="extend w sass" class="image">
+                    <img src="assets/img/extend.webp" alt="extend w sass" class="image">
                     <p class="section__paragraph"><strong>&</strong> - parent selector:</p>
-                    <img src="img/parent-selector.webp" alt="parent selector dla sass" class="image">
+                    <img src="assets/img/parent-selector.webp" alt="parent selector dla sass" class="image">
                     <a class="section__link"
                         href="https://sass-lang.com/documentation">https://sass-lang.com/documentation</a>
                     <a class="section__link" href="https://www.sassmeister.com/">https://www.sassmeister.com/</a>
