--- a/src/content/fifth.html
+++ b/src/content/fifth.html
@@ -206,7 +206,7 @@
                             dane są w treści formularza</li>
                         <li><strong>name="nazwaPola"</strong> - nazwa wykorzystywana do identyfikacji danych wejściowych
                         </li>
-                        <li><strong>id="idPola"</strong> - używamy do odniesienia się do label for=""</li>
+                        <li><strong>id="idPola"</strong> - używamy dla odniesienia się do label for=""</li>
                         <li><strong>type="text"</strong> - określa typ wprowadzanych danych</li>
                         <li><strong>value="wartość pola"</strong> - aktualna wartość pola</li>
                         <li><strong>placeholder= "Tekst podpowiedzi"</strong></li>
@@ -305,7 +305,7 @@
                     <p class="section__paragraph">RWD (Responsive web design) to tworzenie stron dopasowujących się do
                         urządzenia, na którym jest wyświetlana.</p>
                     <p class="section__paragraph"><strong>@media</strong> - słowo kluczowe, własność, dzięki któremu
-                        możemy decydować co się ma zadziać na danym urządzeniu, w danej rozdzielczości.</p>
+                        możemy decydować, co się ma zadziać na danym urządzeniu, w danej rozdzielczości.</p>
                     <p class="section__paragraph"><strong>@media</strong> screen, print, all... - wybór typu
                         urządzenia (media type).</p>
                     <p class="section__paragraph"><strong>@media</strong> min-width, max-width, color, aspect-ratio,
