--- a/src/content/seventh.html
+++ b/src/content/seventh.html
@@ -248,7 +248,7 @@
                     <ul class="section__list">
                         <li>pozwalają na bezkarne testowanie</li>
                         <li>służą do bardziej efektywnego rozwijania oprogramowania</li>
-                        <li>pozwalają zrównoleglić pracę</li>
+                        <li>pozwalają na równoległą pracę</li>
                         <li>zwiększają czytelność postępu prac nad projektem</li>
                         <li>ułatwiają wypuszczanie rzeczy na świat</li>
                     </ul>
