--- a/src/content/sixth.html
+++ b/src/content/sixth.html
@@ -254,7 +254,8 @@
                         <li><strong>element::before</strong> - występuje przed treścią elementu</li>
                         <li><strong>element::after</strong> - występuje po treści elementu</li>
                         <li><strong>content: " "</strong> - dodaje treść do pseudoelementów before i after</li>
-                        <li><strong>element::first-line</strong> - stylowanie pierwszej lini treści w elemencie blokowym
+                        <li><strong>element::first-line</strong> - stylowanie pierwszej linii treści w elemencie
+                            blokowym
                         </li>
                         <li><strong>element::first-letter</strong> - dotyczy pierwszej litery w pierwszym wierszu
                             elementu blokowego</li>
@@ -299,13 +300,13 @@
                     <a class="section__link" href="https://nodejs.org">https://nodejs.org</a>
                     <p class="section__paragraph">npm - menadżer paczek rozszerzających funkcjonalność środowiska
                         node.js</p>
-                    <p class="section__paragraph"><strong>npm init</strong> - polecenie które tworzy pakiet npm,
+                    <p class="section__paragraph"><strong>npm init</strong> - polecenie, które tworzy pakiet npm,
                         wynikiem jest plik packages.json zawierający informacje dotyczące naszego projektu. Dzięki temu
                         możemy podzielić się projektem publicznie i może być on rozwijany przez inne osoby.</p>
                     <p class="section__paragraph"><strong>npm install &lt;nazwa_paczki&gt; --save</strong> - instalacja
-                        paczki, wykorzystujemy wtedy kiedy paczki są niezbędne do uruchamiania aplikacji.</p>
+                        paczki, wykorzystujemy, wtedy kiedy paczki są niezbędne do uruchamiania aplikacji.</p>
                     <p class="section__paragraph"><strong>npm install &lt;nazwa_paczki&gt; --save-dev</strong> -
-                        wykorzystujemy wtedy kiedy paczka jest niezbędna do rozwijania i testowania aplikacji.</p>
+                        wykorzystujemy, wtedy kiedy paczka jest niezbędna do rozwijania i testowania aplikacji.</p>
                     <p class="section__paragraph">node_modules - katalog zawierający zainstalowane paczki. Ten katalog
                         nie dodajemy do repozytorium projektu.</p>
                     <section class="card">
