--- a/eight.html
+++ b/eight.html
@@ -267,7 +267,7 @@
                 <section class="section" id="svg">
                     <h3 class="section__header">SVG - Scalable vector graphics (grafika wektorowa)</h3>
                     <p class="section__paragraph"><strong>SVG</strong> - uniwersalny format dwuwymiarowej grafiki
-                        wektorowej który możemy stylować, animować za pomocą CSS.</p>
+                        wektorowej, który możemy stylować, animować za pomocą CSS.</p>
                     <img src="assets/img/clown-fish.svg" alt="Obrazek rybki w formacie SVG." class="image image--size">
                     <p class="section__paragraph"><strong>Kod grafiki:</strong></p>
                     <img src="assets/img/fish-code.webp" alt="Kod grafiki wektorowej." class="image">
