--- a/tenth.html
+++ b/tenth.html
@@ -289,7 +289,7 @@
                                             &lt;/ul&gt;                              
                                 </code>
                                 <code class="language-css section__code">
-                                     .item + li {
+                                     .item ~ li {
                                          background: blue;
                                      }                             
                                 </code>
