fix: typo in the text

--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -201,7 +201,7 @@
                     <h3 class="section__header">logika w JS</h3>
                     <section class="card">
                         <h4 class="card__header">Operatory</h4>
-                        <p class="section__paragraph"><strong>delete</strong> - operator delete służy do usuwania właściwości z obiektu lub pustego miejsca w tablicy. Jeżeli żądana operacja jest poprawna (dopuszczalna), zwraca wartość <strong>true</strong>, w przeciwnym wypadku <strong>false</strong>.</p>
+                        <p class="section__paragraph"><strong>delete</strong> - operator delete służy do usuwania właściwości z obiektu lub pustego miejsca w tablicy. Jeżeli żądana operacja jest poprawna (dopuszczalna) zwraca wartość <strong>true</strong>, w przeciwnym wypadku <strong>false</strong>.</p>
                         <pre class="data-pre data-pre--white-space">
                             <code class="language-js section__code">const obj = {
                                 a: 555
