fix: content context changed

--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -384,7 +384,7 @@
                                     undefined)</li>
                             </ul>
                         </section>
-                        <p class="section__paragraph">Stworzenie funkcji</p>
+                        <p class="section__paragraph">Deklaracja funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">function calculate(x) {
                             x = x + 5;
