--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -556,7 +556,7 @@
         </article>
     </main>
     <footer class="footer">
-        <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
+        <p class="footer__paragraph">Projekt edukacyjny Andrzeja</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
