--- a/fourth.html
+++ b/fourth.html
@@ -384,7 +384,7 @@
                                     undefined)</li>
                             </ul>
                         </section>
-                        <p class="section__paragraph">Stworzenie funkcji</p>
+                        <p class="section__paragraph">Deklaracja funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">function calculate(x) {
                             x = x + 5;
@@ -556,7 +556,7 @@
         </article>
     </main>
     <footer class="footer">
-        <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
+        <p class="footer__paragraph">Projekt edukacyjny Andrzeja</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
