--- a/dev-tools.html
+++ b/dev-tools.html
@@ -303,6 +303,22 @@
                                     class="section-doc__title">MDN
                                     JavaScript</span><span class="section-doc__description">Wprowadzenie do
                                     JS</span></a></li>
+                        <li class="section-doc__item"><a
+                                href="https://github.com/helloroman/od-czego-zaczac-nauke"
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Od hello roman</span><span class="section-doc__description">Nauka programowania – od czego zacząć?</span></a></li>
+                        <li class="section-doc__item"><a href="https://github.com/lydiahallie/javascript-questions"
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Lista pytań JavaScript</span><span
+                                    class="section-doc__description">Sprawdź, jak dobrze znasz JavaScript, odśwież swoją wiedzę lub przygotuj się na rozmowę rekrutacyjną!.</span></a></li>
+                        <li class="section-doc__item"><a href="https://github.com/lydiahallie/javascript-questions"
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">You Don't Know JS Yet</span><span
+                                    class="section-doc__description">Seria książek o języku JavaScript.</span></a></li>
+                        <li class="section-doc__item"><a href="https://github.com/lydiahallie/javascript-questions"
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Awesome React</span><span
+                                    class="section-doc__description">Zbiór niesamowitych rzeczy dotyczących ekosystemu React.</span></a></li>      
                     </ul>
                 </section>
                 <section class="section-tools" id="tools">
@@ -471,7 +487,7 @@
         </article>
     </main>
     <footer class="footer">
-        <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
+        <p class="footer__paragraph">Projekt edukacyjny Andrzeja</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
